--- a/challenge.html
+++ b/challenge.html
@@ -11,8 +11,8 @@
 
 </div>
 
-
 <h3> Academic Achievements </h3>
 
-<p2> GOOD NEWS LUTHERAN COLLEGE </p2><p3> Tarneit, Melbourne 3029 </p3>
+<h4> GOOD NEWS LUTHERAN COLLEGE </h4><h5> Tarneit, Melbourne 3029 </h5>
 
+<p1> Completed from grades PREP to Year 9 at Good News Lutheran College </p1> 
